src/test/deca/context/invalid/class24.deca
class A{
    int a;
    int b;
    if(true){
        
    }
} 
{
    A a=new A();
    
}